[project]
name = "ssh-mcp"
version = "0.1.0"
description = "Minimal MCP server for persistent SSH shell sessions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0,<2.0.0",
  "paramiko>=3.5.0,<5.0.0",
]

[project.scripts]
ssh-mcp = "ssh_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
